; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipset/extr_ip_set_bitmap_port.c_init_map_port.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipset/extr_ip_set_bitmap_port.c_init_map_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_set = type { i32, %struct.bitmap_port* }
%struct.bitmap_port = type { i32, i8*, i8*, i32, i32 }

@IPSET_NO_TIMEOUT = common dso_local global i32 0, align 4
@AF_UNSPEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ip_set*, %struct.bitmap_port*, i8*, i8*)* @init_map_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_map_port(%struct.ip_set* %0, %struct.bitmap_port* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ip_set*, align 8
  %7 = alloca %struct.bitmap_port*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store %struct.ip_set* %0, %struct.ip_set** %6, align 8
  store %struct.bitmap_port* %1, %struct.bitmap_port** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  %10 = load %struct.bitmap_port*, %struct.bitmap_port** %7, align 8
  %11 = getelementptr inbounds %struct.bitmap_port, %struct.bitmap_port* %10, i32 0, i32 4
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @ip_set_alloc(i32 %12)
  %14 = load %struct.bitmap_port*, %struct.bitmap_port** %7, align 8
  %15 = getelementptr inbounds %struct.bitmap_port, %struct.bitmap_port* %14, i32 0, i32 3
  store i32 %13, i32* %15, align 8
  %16 = load %struct.bitmap_port*, %struct.bitmap_port** %7, align 8
  %17 = getelementptr inbounds %struct.bitmap_port, %struct.bitmap_port* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 8
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %37

21:                                               ; preds = %4
  %22 = load i8*, i8** %8, align 8
  %23 = load %struct.bitmap_port*, %struct.bitmap_port** %7, align 8
  %24 = getelementptr inbounds %struct.bitmap_port, %struct.bitmap_port* %23, i32 0, i32 2
  store i8* %22, i8** %24, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = load %struct.bitmap_port*, %struct.bitmap_port** %7, align 8
  %27 = getelementptr inbounds %struct.bitmap_port, %struct.bitmap_port* %26, i32 0, i32 1
  store i8* %25, i8** %27, align 8
  %28 = load i32, i32* @IPSET_NO_TIMEOUT, align 4
  %29 = load %struct.bitmap_port*, %struct.bitmap_port** %7, align 8
  %30 = getelementptr inbounds %struct.bitmap_port, %struct.bitmap_port* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 8
  %31 = load %struct.bitmap_port*, %struct.bitmap_port** %7, align 8
  %32 = load %struct.ip_set*, %struct.ip_set** %6, align 8
  %33 = getelementptr inbounds %struct.ip_set, %struct.ip_set* %32, i32 0, i32 1
  store %struct.bitmap_port* %31, %struct.bitmap_port** %33, align 8
  %34 = load i32, i32* @AF_UNSPEC, align 4
  %35 = load %struct.ip_set*, %struct.ip_set** %6, align 8
  %36 = getelementptr inbounds %struct.ip_set, %struct.ip_set* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 8
  store i32 1, i32* %5, align 4
  br label %37

37:                                               ; preds = %21, %20
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32 @ip_set_alloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
